[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-cpp-demo"
version = "0.1.0"
description = "A PyTorch extension with CUDA support."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
dependencies =  [ "torch", "ninja"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "black",
    "isort"
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu128"]

[tool.setuptools]
packages = ["torch_cpp_demo"]